[gd_scene load_steps=41 format=2]

[ext_resource path="res://Objects/ground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Music/level1.mp3" type="AudioStream" id=3]
[ext_resource path="res://Objects/scenery.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/vine.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/level_1.gd" type="Script" id=6]
[ext_resource path="res://Textures/Tiles/lava.tres" type="Texture" id=7]
[ext_resource path="res://Textures/Tiles/low_lava.tres" type="Texture" id=8]
[ext_resource path="res://Textures/background.png" type="Texture" id=9]
[ext_resource path="res://Objects/keys.tscn" type="PackedScene" id=10]
[ext_resource path="res://Font/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Textures/Tiles/spikes.png" type="Texture" id=12]
[ext_resource path="res://Objects/enemy.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sprites/Menu_Items/playbutton1.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Menu_Items/playbutton0.png" type="Texture" id=15]
[ext_resource path="res://SoundFX/select.tres" type="AudioStream" id=16]
[ext_resource path="res://Textures/volcano.png" type="Texture" id=17]
[ext_resource path="res://Textures/bggrass.png" type="Texture" id=18]
[ext_resource path="res://Textures/backgroundtree.png" type="Texture" id=19]
[ext_resource path="res://Textures/door.png" type="Texture" id=20]
[ext_resource path="res://Scripts/timer.gd" type="Script" id=21]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 17 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 17 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 17 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 17 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 32, 32, 0, 32, 8, 8, 24, 8 )

[sub_resource type="TileSet" id=19]
0/name = "spikes.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 31 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 15.5, 15.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 17.75, 322.75 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 7.42005, 20.25 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=26]
length = 35.0
tracks/0/type = "value"
tracks/0/path = NodePath("lavaanim/lava:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -7 ), Vector2( 0, -620 ) ]
}

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 32, 32, 0, 32, 0, 8, 32, 8 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=25]
0/name = "lava.tres 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 29 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "low_lava.tres 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 30 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 816.5, 95.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 136, -37 )
texture = ExtResource( 9 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0.1 )

[node name="Bggrass" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 153, 86.1563 )
scale = Vector2( 25.9687, 6.15625 )
texture = ExtResource( 18 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )

[node name="volcano" type="AnimatedSprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 87, -46 )
scale = Vector2( 1.37118, 1.28544 )
frames = SubResource( 23 )
frame = 4
playing = true

[node name="Backgroundtree" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -51, -1 )
scale = Vector2( 1.20313, 1.20313 )
texture = ExtResource( 19 )

[node name="Backgroundtree6" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -116, -8 )
scale = Vector2( 1.66406, 1.66406 )
texture = ExtResource( 19 )

[node name="Backgroundtree11" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -150, 5 )
scale = Vector2( 1.66406, 1.66406 )
texture = ExtResource( 19 )

[node name="Backgroundtree12" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -191, -7 )
scale = Vector2( 1.66406, 1.66406 )
texture = ExtResource( 19 )

[node name="Backgroundtree13" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 260.688, 6.6875 )
scale = Vector2( 1.45703, 1.45703 )
texture = ExtResource( 19 )

[node name="Backgroundtree14" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 299.844, -0.843768 )
scale = Vector2( 1.57227, 1.57227 )
texture = ExtResource( 19 )

[node name="Backgroundtree7" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 104, 14 )
scale = Vector2( 1.39453, 1.39453 )
texture = ExtResource( 19 )

[node name="Backgroundtree8" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 146, 6 )
scale = Vector2( 1.63477, 1.63477 )
texture = ExtResource( 19 )

[node name="Backgroundtree9" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 183, 9 )
scale = Vector2( 1.41113, 1.41113 )
texture = ExtResource( 19 )

[node name="Backgroundtree10" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 221, 1 )
scale = Vector2( 1.83057, 1.83057 )
texture = ExtResource( 19 )

[node name="Backgroundtree5" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -87.125, 2.125 )
scale = Vector2( 1.38281, 1.38281 )
texture = ExtResource( 19 )

[node name="Backgroundtree2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -20.25, 5.75 )
scale = Vector2( 1.26563, 1.26563 )
texture = ExtResource( 19 )

[node name="Backgroundtree3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 66.75, 20.75 )
scale = Vector2( 1.51563, 1.51563 )
texture = ExtResource( 19 )

[node name="Backgroundtree4" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 24, 5 )
scale = Vector2( 1.64063, 1.64063 )
texture = ExtResource( 19 )

[node name="scenery" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 262140, 536870912, 0, 196608, 536870912, 0, 196614, 536870912, 0, 196620, 536870912, 0 )

[node name="spikezone" type="Area2D" parent="."]
position = Vector2( 33, 117 )

[node name="spikes" type="TileMap" parent="spikezone"]
position = Vector2( 131, 12 )
tile_set = SubResource( 19 )
cell_size = Vector2( 32, 32 )
show_collision = true
collision_use_parent = true
format = 1
tile_data = PoolIntArray( -1507350, -1073741824, 0, -1507349, -536870912, 0, -1507330, -1073741824, 0, -1507329, -536870912, 0, -1441814, -1073741824, 0, -1441813, -536870912, 0, -1441794, -1073741824, 0, -1441793, -536870912, 0, -1376278, -1073741824, 0, -1376277, -536870912, 0, -1376258, -1073741824, 0, -1376257, -536870912, 0, -1310742, -1073741824, 0, -1310741, -536870912, 0, -1310722, -1073741824, 0, -1310721, -536870912, 0, -1245206, -1073741824, 0, -1245205, -1610612736, 0, -1245194, 1610612736, 0, -1245193, 1610612736, 0, -1245192, 1610612736, 0, -1245191, 1610612736, 0, -1245186, -1073741824, 0, -1245185, -536870912, 0, -1179670, -1073741824, 0, -1179669, -1610612736, 0, -1179650, -1073741824, 0, -1179649, -536870912, 0, -1114134, -1073741824, 0, -1114133, -1610612736, 0, -1114114, -1073741824, 0, -1114113, -536870912, 0, -1179634, -1073741824, 0, -1179633, -536870912, 0, -1048598, -1073741824, 0, -1048597, -1610612736, 0, -1048578, -1073741824, 0, -1048577, -536870912, 0, -1114098, -1073741824, 0, -1114097, -536870912, 0, -983062, -1073741824, 0, -983061, -1610612736, 0, -983042, -1073741824, 0, -983041, -536870912, 0, -1048562, -1073741824, 0, -1048561, -536870912, 0, -917526, -1073741824, 0, -917525, -1610612736, 0, -983026, -1073741824, 0, -983025, -536870912, 0, -851990, -1073741824, 0, -851989, -1610612736, 0, -917490, -1073741824, 0, -917489, -536870912, 0, -786454, -1073741824, 0, -786453, -1610612736, 0, -851954, -1073741824, 0, -851953, -536870912, 0, -720918, -1073741824, 0, -720917, -1610612736, 0, -786418, -1073741824, 0, -786417, -536870912, 0, -655382, -1073741824, 0, -655381, -1610612736, 0, -720885, 0, 0, -720882, -1073741824, 0, -720881, -536870912, 0, -589846, -1073741824, 0, -589845, -1610612736, 0, -655348, 1073741824, 0, -655347, 1073741824, 0, -655346, -1073741824, 0, -655345, -536870912, 0, -524310, -1073741824, 0, -524309, -1610612736, 0, -589824, -1073741824, 0, -589823, -1610612736, 0, -589810, -1073741824, 0, -589809, -536870912, 0, -458774, -1073741824, 0, -458773, -1610612736, 0, -524288, -1073741824, 0, -524287, -1610612736, 0, -524274, -1073741824, 0, -524273, -536870912, 0, -393238, -1073741824, 0, -393237, -1610612736, 0, -458752, -1073741824, 0, -458751, -1610612736, 0, -458738, -1073741824, 0, -458737, -536870912, 0, -327702, -1073741824, 0, -327701, -1610612736, 0, -393216, -1073741824, 0, -393215, -1610612736, 0, -393202, -1073741824, 0, -393201, -536870912, 0, -262166, -1073741824, 0, -262165, -1610612736, 0, -327666, -1073741824, 0, -327665, -536870912, 0, -196630, -1073741824, 0, -196629, -1610612736, 0, -262130, -1073741824, 0, -262129, -536870912, 0, -131094, -1073741824, 0, -131093, -1610612736, 0, -196594, -1073741824, 0, -196593, -536870912, 0, -65558, -1073741824, 0, -65557, -1610612736, 0, -131058, -1073741824, 0, -131057, -536870912, 0, -22, -1073741824, 0, -21, -1610612736, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -65530, 0, 0, -65529, 536870912, 0, -65526, 536870912, 0, -65525, 536870912, 0, -65524, 536870912, 0, -65523, 536870912, 0, -65522, -1073741824, 0, -65521, -536870912, 0 )

[node name="vine" parent="." instance=ExtResource( 5 )]
position = Vector2( 149, 189 )
tile_data = PoolIntArray( -1114129, 1610612736, 0, -1048593, 1610612736, 0, -1048587, 1073741824, 0, -1048581, 1073741824, 0, -983057, 1610612737, 0, -983051, 1073741824, 0, -983045, 1073741824, 0, -917515, 1073741824, 0, -917509, 1073741824, 0, -851979, 1073741824, 0, -851973, 1073741824, 0, -786443, 1073741825, 0, -786437, 1073741825, 0, -786423, 1610612736, 0, -720887, 536870912, 0, -655351, 1610612737, 0, -458749, 1610612736, 0, -393213, 1073741825, 0, -262142, 1073741825, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="ground" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -1048581, 5, 0, -1048580, 536870917, 0, -1048577, 1073741829, 0, -1114112, 1073741830, 0, -1114111, 1610612741, 0, -983053, 5, 0, -983052, 6, 0, -983051, 6, 0, -983050, 6, 0, -983049, 536870917, 0, -917512, 1073741829, 0, -917511, 1073741830, 0, -917510, 1073741830, 0, -917509, 1073741830, 0, -917508, 1073741830, 0, -917507, 1073741830, 0, -917506, 1073741830, 0, -917505, 536870918, 0, -983040, 536870918, 0, -983039, 536870917, 0, -720912, 5, 0, -720911, 536870917, 0, -720909, 1073741829, 0, -720908, 1610612741, 0, -655371, 1073741829, 0, -655370, 1610612741, 0, -655347, 1073741829, 0, -655346, 1073741830, 0, -655345, 1073741830, 0, -655344, 1073741830, 0, -655343, 1610612741, 0, -524293, 1073741829, 0, -524292, 1610612741, 0, -589823, 1073741829, 0, -589822, 1073741830, 0, -589821, 1073741830, 0, -589820, 1073741830, 0, -589819, 1073741830, 0, -589818, 1610612742, 0, -589817, 1610612742, 0, -589816, 1610612742, 0, -589815, 1610612741, 0, -458736, 1073741829, 0, -458735, 1610612741, 0, -393211, 3, 0, -393210, 3, 0, -393208, 1073741829, 0, -393207, 1073741830, 0, -393206, 1073741830, 0, -393205, 1073741830, 0, -393204, 1610612741, 0, -327676, 5, 0, -327675, 6, 0, -327674, 536870917, 0, -131066, 5, 0, -131065, 6, 0, -131064, 6, 0, -131063, 536870917, 0, -65524, 1073741829, 0, -65523, 1610612741, 0, 65514, 536870912, 0, 65515, 536870912, 0, 65516, 536870912, 0, 65517, 536870912, 0, 65518, 536870912, 0, 65519, 536870912, 0, 65520, 536870912, 0, 65521, 536870912, 0, 65522, 536870912, 0, 65523, 536870912, 0, 65524, 536870912, 0, 65525, 536870912, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 536870912, 0, 65530, 536870912, 0, 65531, 536870912, 0, 65532, 536870912, 0, 65533, 536870912, 0, 65534, 536870912, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 536870912, 0, 10, 536870912, 0, 11, 536870912, 0, 12, 536870912, 0, 13, 536870912, 0, 14, 536870912, 0, 15, 536870912, 0, 16, 536870912, 0, 17, 536870912, 0, 18, 536870912, 0, 19, 536870912, 0, 20, 536870912, 0, 21, 536870912, 0, 22, 536870912, 0, 23, 536870912, 0, 24, 536870912, 0, 25, 536870912, 0, 26, 536870912, 0, 27, 536870912, 0, 28, 536870912, 0, 131050, 4, 0, 131051, 4, 0, 131052, 4, 0, 131053, 4, 0, 131054, 4, 0, 131055, 4, 0, 131056, 4, 0, 131057, 4, 0, 131058, 4, 0, 131059, 4, 0, 131060, 4, 0, 131061, 4, 0, 131062, 4, 0, 131063, 4, 0, 131064, 4, 0, 131065, 4, 0, 131066, 4, 0, 131067, 4, 0, 131068, 4, 0, 131069, 4, 0, 131070, 4, 0, 131071, 4, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 4, 0, 65558, 4, 0, 65559, 4, 0, 65560, 4, 0, 65561, 4, 0, 65562, 4, 0, 65563, 4, 0, 65564, 4, 0, 196586, 1, 0, 196587, 1, 0, 196588, 1, 0, 196589, 1, 0, 196590, 1, 0, 196591, 1, 0, 196592, 1, 0, 196593, 1, 0, 196594, 1, 0, 196595, 1, 0, 196596, 1, 0, 196597, 1, 0, 196598, 1, 0, 196599, 1, 0, 196600, 1, 0, 196601, 1, 0, 196602, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0 )

[node name="DoorArea" type="Area2D" parent="."]
position = Vector2( 0, 1 )

[node name="Door" type="Sprite" parent="DoorArea"]
position = Vector2( 52, -435 )
texture = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2( 52.5, -435.5 )
shape = SubResource( 27 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 178, 102 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 25, -10 )
z_as_relative = false
offset = Vector2( 0, 5 )
current = true
zoom = Vector2( 1.1, 1.1 )
limit_smoothed = true
smoothing_speed = 10.0
offset_v = -1.0
drag_margin_top = 0.0
drag_margin_bottom = 0.21

[node name="Main Theme" type="AudioStreamPlayer2D" parent="Player"]
pause_mode = 2
position = Vector2( -2, -123 )
stream = ExtResource( 3 )
volume_db = 0.874
autoplay = true

[node name="playerboundaries" type="StaticBody2D" parent="."]

[node name="left" type="CollisionShape2D" parent="playerboundaries"]
position = Vector2( 943, -208 )
shape = SubResource( 12 )

[node name="right" type="CollisionShape2D" parent="playerboundaries"]
position = Vector2( -653, -212.25 )
shape = SubResource( 12 )

[node name="keys" parent="." instance=ExtResource( 10 )]
position = Vector2( 326, 64 )

[node name="keys2" parent="." instance=ExtResource( 10 )]
position = Vector2( 455, -127 )

[node name="keys3" parent="." instance=ExtResource( 10 )]
position = Vector2( 455, -224 )

[node name="keys4" parent="." instance=ExtResource( 10 )]
position = Vector2( -217, -192 )

[node name="keys5" parent="." instance=ExtResource( 10 )]
position = Vector2( -574, -288 )

[node name="keys6" parent="." instance=ExtResource( 10 )]
position = Vector2( -217, -449 )

[node name="enemywalkingbounds" type="Area2D" parent="."]
position = Vector2( 116, -315 )
collision_layer = 4
collision_mask = 4

[node name="enemy" parent="enemywalkingbounds" instance=ExtResource( 13 )]
position = Vector2( 1, -1 )
collision_layer = 5

[node name="enemy2" parent="enemywalkingbounds" instance=ExtResource( 13 )]
position = Vector2( -551, -227 )
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemywalkingbounds"]
position = Vector2( 4, 129 )
shape = SubResource( 20 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="enemywalkingbounds"]
position = Vector2( -493, -93 )
shape = SubResource( 20 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="enemywalkingbounds"]
position = Vector2( -347, -94 )
shape = SubResource( 20 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="enemywalkingbounds"]
position = Vector2( 182, 129 )
shape = SubResource( 20 )

[node name="border" type="ColorRect" parent="."]
margin_left = 165.0
margin_top = 42.0
margin_right = 296.0
margin_bottom = 92.0
color = Color( 0.639216, 0.737255, 0.25098, 1 )

[node name="background" type="ColorRect" parent="border"]
margin_left = 3.0
margin_top = 3.0
margin_right = 127.0
margin_bottom = 47.0
color = Color( 0.356863, 0.415686, 0.129412, 1 )

[node name="text" type="RichTextLabel" parent="border/background"]
margin_left = 5.0
margin_top = 2.0
margin_right = 241.0
margin_bottom = 86.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 21 )
text = "The volcano has erupted and Lava is approaching!
Quickly climb the platforms and collect the keys!!!"
scroll_active = false
__meta__ = {
"_editor_description_": ""
}

[node name="button0" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 226.1, 102.1 )
scale = Vector2( 0.493751, 0.493751 )
texture = ExtResource( 14 )

[node name="button1" type="Sprite" parent="."]
pause_mode = 2
visible = false
position = Vector2( 226, 102 )
scale = Vector2( 0.493749, 0.493749 )
texture = ExtResource( 15 )

[node name="Level1Box" type="Area2D" parent="."]
pause_mode = 2
position = Vector2( 182, -13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level1Box"]
position = Vector2( 44, 115 )
shape = SubResource( 22 )

[node name="playFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 156.919, 88.4883 )
stream = ExtResource( 16 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_right = 90.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 13 )
text = "Keys: 0/6"

[node name="text" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 205.0
margin_top = 1.0
margin_right = 435.0
margin_bottom = 27.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 21 )
text = "Time:"
scroll_active = false
script = ExtResource( 21 )
__meta__ = {
"_editor_description_": ""
}

[node name="lavaanim" type="AnimationPlayer" parent="."]
anims/rising = SubResource( 26 )

[node name="lava" type="TileMap" parent="lavaanim"]
position = Vector2( 4, -7 )
tile_set = SubResource( 25 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 458731, 0, 0, 458732, 0, 0, 458733, 0, 0, 458734, 0, 0, 458735, 0, 0, 458736, 0, 0, 458737, 0, 0, 458738, 0, 0, 458739, 0, 0, 458740, 0, 0, 458741, 0, 0, 458742, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 524267, 1, 0, 524268, 1, 0, 524269, 1, 0, 524270, 1, 0, 524271, 1, 0, 524272, 1, 0, 524273, 1, 0, 524274, 1, 0, 524275, 1, 0, 524276, 1, 0, 524277, 1, 0, 524278, 1, 0, 524279, 1, 0, 524280, 1, 0, 524281, 1, 0, 524282, 1, 0, 524283, 1, 0, 524284, 1, 0, 524285, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 589803, 1, 0, 589804, 1, 0, 589805, 1, 0, 589806, 1, 0, 589807, 1, 0, 589808, 1, 0, 589809, 1, 0, 589810, 1, 0, 589811, 1, 0, 589812, 1, 0, 589813, 1, 0, 589814, 1, 0, 589815, 1, 0, 589816, 1, 0, 589817, 1, 0, 589818, 1, 0, 589819, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 655339, 1, 0, 655340, 1, 0, 655341, 1, 0, 655342, 1, 0, 655343, 1, 0, 655344, 1, 0, 655345, 1, 0, 655346, 1, 0, 655347, 1, 0, 655348, 1, 0, 655349, 1, 0, 655350, 1, 0, 655351, 1, 0, 655352, 1, 0, 655353, 1, 0, 655354, 1, 0, 655355, 1, 0, 655356, 1, 0, 655357, 1, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 720875, 1, 0, 720876, 1, 0, 720877, 1, 0, 720878, 1, 0, 720879, 1, 0, 720880, 1, 0, 720881, 1, 0, 720882, 1, 0, 720883, 1, 0, 720884, 1, 0, 720885, 1, 0, 720886, 1, 0, 720887, 1, 0, 720888, 1, 0, 720889, 1, 0, 720890, 1, 0, 720891, 1, 0, 720892, 1, 0, 720893, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0 )

[node name="lava" type="Area2D" parent="lavaanim/lava"]

[node name="lavahitbox" type="CollisionShape2D" parent="lavaanim/lava/lava"]
position = Vector2( 142.5, 288.5 )
shape = SubResource( 9 )

[connection signal="ready" from="." to="." method="_on_Node2D_ready"]
[connection signal="body_entered" from="spikezone" to="." method="_on_spikezone_body_entered"]
[connection signal="body_entered" from="spikezone" to="Player" method="_on_spikezone_body_entered"]
[connection signal="body_entered" from="DoorArea" to="." method="_on_DoorArea_body_entered"]
[connection signal="key_collected" from="keys" to="." method="_on_keys_key_collected"]
[connection signal="key_collected" from="keys2" to="." method="_on_keys_key_collected"]
[connection signal="key_collected" from="keys3" to="." method="_on_keys_key_collected"]
[connection signal="key_collected" from="keys4" to="." method="_on_keys_key_collected"]
[connection signal="key_collected" from="keys5" to="." method="_on_keys_key_collected"]
[connection signal="key_collected" from="keys6" to="." method="_on_keys_key_collected"]
[connection signal="body_entered" from="enemywalkingbounds" to="enemywalkingbounds/enemy" method="_on_enemywalkingbounds_body_entered"]
[connection signal="body_entered" from="enemywalkingbounds" to="enemywalkingbounds/enemy2" method="_on_enemywalkingbounds_body_entered"]
[connection signal="input_event" from="Level1Box" to="." method="_on_Level1Box_input_event"]
[connection signal="mouse_exited" from="Level1Box" to="." method="_on_Level1Box_mouse_exited"]
[connection signal="body_entered" from="lavaanim/lava/lava" to="." method="_on_lava_body_entered"]
